# SafeCrate

./: README.md
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2024-12-31-232521_create_users/: up.sql
backend/migrations/2024-12-31-233506_create_file/: up.sql
backend/migrations/2024-12-31-233716_create_file_share/: down.sql  up.sql
backend/src/: main.rs
backend/src/db/: models.rs  schema.rs
backend/src/services/: mod.rs  user_service.rs
backend/src/utils/: hash_utils.rs  key_utils.rs  mod.rs
